feat: improved rest contracts & added some test
